# gtest_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/gtest_demo/: add.hpp
src/: CMakeLists.txt  add.cpp
test/include/: test_add.hpp
test/src/: test_add.cpp
